--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 									<h3 class="widget-title">Контакты</h3>
 									<ul class="contact-list">
 										<li>
-											Адресс: <span>9291 Proin Road, Lake Charles Maine 11292</span>
+											Адресс: <span>4 Кооперативная ул. , Москва</span>
 										</li>
 										<li>
 											Телефон: <span>+1 234 800 8080</span>
@@ -457,35 +457,7 @@
 											Email: <span>info.deercreative@gmail.com</span>
 										</li>
 									</ul>
-									<div class="widget widget_themesflat_socials">            
-										<ul class="themesflat-shortcode-socials">
-									        <li class="facebook">
-						                        <a href="#" target="_blank" rel="alternate" title="">
-						                            <i class="fa fa-facebook"></i>                            
-						                        </a>
-						                    </li>
-						                    <li class="twitter">
-						                        <a href="#" target="_blank" rel="alternate" title="">
-						                            <i class="fa fa-twitter"></i>                            
-						                        </a>
-						                    </li>
-						                    <li class="google-plus">
-						                        <a href="#" target="_blank" rel="alternate" title="t;">
-						                            <i class="fa fa-google-plus"></i>                            
-						                        </a>
-						                    </li>
-						                    <li class="instagram">
-						                        <a href="#" target="_blank" rel="alternate" title="">
-						                            <i class="fa fa-instagram"></i>                            
-						                        </a>
-						                    </li>
-						                    <li class="linkedin">
-						                        <a href="#" target="_blank" rel="alternate" title="">
-						                            <i class="fa fa-linkedin"></i>                            
-						                        </a>
-						                    </li>
-						                </ul><!-- /.social -->       
-								    </div>
+									
 								</div><!-- /.widget_contact -->
 							</div><!-- /.col-md-4 -->
 						</div><!-- /.footer-widgets -->
@@ -500,7 +472,7 @@
 								
 							</ul>
 							<div class="copyright">
-								<p>© Copyright <a href="#" title="">Coinjet</a> Cryptocurrency Theme by <a href="https://themeforest.net/user/themesflat/portfolio" title="">Themesflat</a> 2018</p>
+								<p>© Copyright <a href="#" title="">Petr Ilyash</a> Cryptocurrency Theme by <a href="https://themeforest.net/user/themesflat/portfolio" title="">Themesflat</a> 2018</p>
 							</div>
 						</div>
 					</div>
