--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,9 @@
 						<ul class="flat-infomation">
 							<li class="email"><a href="mailto:themesflat@gmail.com" title="email">Email:
 									infodeercreative@gmail.com</a></li>
-							<li class="phone"><a href="+61383766284" title="phone">Телефон: +1 234 800 8080</a></li>
 						</ul><!-- /.flat-infomation -->
 						<ul class="box-account">
-
-
+							<li class="phone"><a href="+61383766284" title="phone">Call Us: +1 234 800 8080</a></li>
 						</ul><!-- /.box-account -->
 						<div class="clearfix"></div><!-- /.clearfix -->
 					</div><!-- /.col-md-12 -->
@@ -131,7 +129,7 @@
 							</div><!-- /.box-header -->
 							<div class="box-content">
 								<h2>Адресс</h2>
-								<p>4 Кооперативная ул. , Москва</p>
+								<p>ул. Кооперативная 4, Москва</p>
 							</div><!-- /.box-content -->
 						</div><!-- /.address-box -->
 					</div><!-- /.col-md-4 -->
@@ -222,7 +220,7 @@
 									<h3 class="widget-title">Контакты</h3>
 									<ul class="contact-list">
 										<li>
-											Адресс: <span>4 Кооперативная ул. , Москва</span>
+											Адресс: <span>ул. Кооперативная 4, Москва</span>
 										</li>
 										<li>
 											Телефон: <span>+1 234 800 8080</span>
