--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 									<h3 class="widget-title">Контакты</h3>
 									<ul class="contact-list">
 										<li>
-											Адресс: <span>4 Кооперативная ул. , Москва</span>
+											Адресс: <span>ул. Кооперативная 4, Москва</span>
 										</li>
 										<li>
 											Телефон: <span>+1 234 800 8080</span>
@@ -456,7 +456,7 @@
 
 							</ul>
 							<div class="copyright">
-								<p>© Copyright <a href="#" title="">Petr Ilyash</a> Cryptocurrency Theme by <a
+								<p>© Copyright <a href="#" title="">Peter Ilyash</a> Cryptocurrency Theme by <a
 										href="https://themeforest.net/user/themesflat/portfolio" title="">Themesflat</a> 2018</p>
 							</div>
 						</div>
