--- a/services.html
+++ b/services.html
@@ -48,12 +48,9 @@
 						<ul class="flat-infomation">
 							<li class="email"><a href="mailto:themesflat@gmail.com" title="email">Email:
 									infodeercreative@gmail.com</a></li>
-							<li class="phone"><a href="+61383766284" title="phone">Телефон: +1 234 800 8080</a></li>
 						</ul><!-- /.flat-infomation -->
 						<ul class="box-account">
-
-
-
+							<li class="phone"><a href="+61383766284" title="phone">Call Us: +1 234 800 8080</a></li>
 						</ul><!-- /.box-account -->
 						<div class="clearfix"></div><!-- /.clearfix -->
 					</div><!-- /.col-md-12 -->
@@ -294,7 +291,7 @@
 									<h3 class="widget-title">Контакты</h3>
 									<ul class="contact-list">
 										<li>
-											Адресс: <span>4 Кооперативная ул. , Москва</span>
+											Адресс: <span>ул. Кооперативная 4, Москва</span>
 										</li>
 										<li>
 											Телефон: <span>+1 234 800 8080</span>
