--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
 								</div>
 							</div><!-- /.box-header -->
 							<div class="box-content">
-								<h2>Адресс</h2>
+								<h2>Адрес</h2>
 								<p>ул. Кооперативная 4, Москва</p>
 							</div><!-- /.box-content -->
 						</div><!-- /.address-box -->
@@ -220,7 +220,7 @@
 									<h3 class="widget-title">Контакты</h3>
 									<ul class="contact-list">
 										<li>
-											Адресс: <span>ул. Кооперативная 4, Москва</span>
+											Адрес: <span>ул. Кооперативная 4, Москва</span>
 										</li>
 										<li>
 											Телефон: <span>+1 234 800 8080</span>
