--- a/services.html
+++ b/services.html
@@ -291,7 +291,7 @@
 									<h3 class="widget-title">Контакты</h3>
 									<ul class="contact-list">
 										<li>
-											Адресс: <span>ул. Кооперативная 4, Москва</span>
+											Адрес: <span>ул. Кооперативная 4, Москва</span>
 										</li>
 										<li>
 											Телефон: <span>+1 234 800 8080</span>
